fixed problem with overflowing

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -1,9 +1,12 @@
 .layout {
+  height: 100vh;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   &__main {
     flex-grow: 1;
+    overflow: scroll;
   }
   &__menubutton {
     cursor: pointer;
